--- a/index.html
+++ b/index.html
@@ -21,36 +21,7 @@
         </nav>
     </header>
 
-    <div id="home-page" class="page active">
-        <div class="hero">
-            <h1>Jogo para usar na aula de hoje!</h1>
-            <p>Clique em download e baixe o apk no botão "TRANSFERIR"</p>
-        </div>
-        <div class="game-list">
-            <div class="game-card">
-                <img src="logos/fm.webp" alt="Fuga de Marte">
-                <h3>Fuga de Marte</h3>
-                <p>Educativo</p>
-                <p>Grátis</p>
-                <h5>Observações:</h5>
-                <p>Iluminação ativada</p>
-                <br>
-                <a href="https://1drv.ms/u/c/823afd009c784c7e/EdFgKljugMlDgkfl9OYYKU4B3Pfe40QMrj7CvQFeVh-ZKg?e=DFT2pr"><img src="logos/download.png" alt="Google Play Store"></a>
-            </div>
-
-            <div class="game-card">
-                <img src="logos/fm.webp" alt="Fuga de Marte">
-                <h3>Fuga de Marte</h3>
-                <p>Educativo</p>
-                <p>Grátis</p>
-                <h5>Observações:</h5>
-                <p>Iluminação desativada</p>
-                <br>
-                <a href="https://1drv.ms/u/c/823afd009c784c7e/EbMDZgdDaKpBp6amvU5PPK4BFNfV5aHi9qZVHpC9OcGNhg?e=XCafh1"><img src="logos/download.png" alt="Google Play Store"></a>
-            </div>
-            <div class="apps-grid" id="apps-grid">
-            </div>
-        </div>
+   
 
 
 
@@ -220,6 +191,18 @@
                     <p>Android 14 ou superior</p>
                     <br>
                     <a href="https://play.google.com/store/apps/details?id=com.IFbaiamo.NeonJogodesoma&pcampaignid=web_share"><img src="logos/googleplay.png"></a>
+                </div>
+
+                <div class="game-card">
+                    <img src="logos/njs.jpg" alt="Neon - Jogo de Soma">
+                    <h3>Neon - Jogo de Soma</h3>
+                    <p>Educativo</p>
+                    <p>Grátis</p>
+                    <p>há <span class="release-time" data-release="2024-07-31"></span></p>
+                    <h5>Requisitos mínimos:</h5>
+                    <p>Android</p>
+                    <br>
+                    <a href="https://drive.google.com/file/d/1Smu8fGcGZTHAbs3n6mOWjo5F3eGQqtcB/view?usp=sharing"><img src="logos/download.png" alt="download"></a>
                 </div>
 
                 <div class="game-card">
