--- a/index.html
+++ b/index.html
@@ -56,6 +56,20 @@
                     <br>
                     <a href="https://play.google.com/store/apps/details?id=com.JEGIF.FugaDeMarteIntroduoAAlgoritmos&pcampaignid=web_share"><img src="logos/googleplay.png" alt="Google Play Store"></a>
                 </div>
+
+                <div class="game-card">
+                    <img src="logos/fm.webp" alt="Fuga de Marte">
+                    <h3>Fuga de Marte</h3>
+                    <p>Educativo</p>
+                    <p>Grátis</p>
+                    <p>há <span class="release-time" data-release="2024-12-13"></span></p>
+                    <h5>Requisitos mínimos:</h5>
+                    <p>Android</p>
+                    <br>
+                    <a href="https://1drv.ms/u/c/823afd009c784c7e/EdFgKljugMlDgkfl9OYYKU4B3Pfe40QMrj7CvQFeVh-ZKg?e=DFT2pr"><img src="logos/googleplay.png" alt="Google Play Store"></a>
+                </div>
+                
+            
                 <div class="game-card">
                     <img src="logos/eq.webp" alt="EditQuiz">
                     <h3>EditQuiz</h3>
