--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <h5>Requisitos mínimos:</h5>
                     <p>Android</p>
                     <br>
-                    <a href="https://1drv.ms/u/c/823afd009c784c7e/EdFgKljugMlDgkfl9OYYKU4B3Pfe40QMrj7CvQFeVh-ZKg?e=DFT2pr"><img src="logos/googleplay.png" alt="Google Play Store"></a>
+                    <a href="https://1drv.ms/u/c/823afd009c784c7e/EdFgKljugMlDgkfl9OYYKU4B3Pfe40QMrj7CvQFeVh-ZKg?e=DFT2pr"><img src="logos/download.png" alt="Google Play Store"></a>
                 </div>
                 
             
@@ -257,6 +257,17 @@
                     <a href="https://play.google.com/store/apps/details?id=com.JEGIF.FugaDeMarteIntroduoAAlgoritmos&pcampaignid=web_share"><img src="logos/googleplay.png" alt="Google Play Store"></a>
                 </div>
                 <div class="game-card">
+                    <img src="logos/fm.webp" alt="Fuga de Marte">
+                    <h3>Fuga de Marte</h3>
+                    <p>Educativo</p>
+                    <p>Grátis</p>
+                    <p>há <span class="release-time" data-release="2024-12-13"></span></p>
+                    <h5>Requisitos mínimos:</h5>
+                    <p>Android</p>
+                    <br>
+                    <a href="https://1drv.ms/u/c/823afd009c784c7e/EdFgKljugMlDgkfl9OYYKU4B3Pfe40QMrj7CvQFeVh-ZKg?e=DFT2pr"><img src="logos/download.png" alt="Google Play Store"></a>
+                </div>
+                <div class="game-card">
                     <img src="logos/j.webp" alt="Jararavras">
                     <h3>Jararavras</h3>
                     <p>Educativo</p>
@@ -365,6 +376,17 @@
                     <p>Android 14 ou superior</p>
                     <br>
                     <a href="https://play.google.com/store/apps/details?id=com.IFbaiamo.NeonJogodesoma&pcampaignid=web_share"><img src="logos/googleplay.png"></a>
+                </div>
+                <div class="game-card">
+                    <img src="logos/njs.jpg" alt="Neon - Jogo de Soma">
+                    <h3>Neon - Jogo de Soma</h3>
+                    <p>Educativo</p>
+                    <p>Grátis</p>
+                    <p>há <span class="release-time" data-release="2024-07-31"></span></p>
+                    <h5>Requisitos mínimos:</h5>
+                    <p>Android</p>
+                    <br>
+                    <a href="https://drive.google.com/drive/folders/1Blla7c0swbvxazFdbv6DV5dcZ8BjSHxJ?usp=sharing"><img src="logos/download.png" alt="download"></a>
                 </div>
                 <div class="game-card">
                     <img src="logos/ne.png" alt="Números nas Estrelas">
