--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GEJIF</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap">
 </head>
 
@@ -229,9 +229,7 @@
 
         <!-- Links sociais -->
         <div class="footer-bottom">
-            <div class="social-links">
-                <a href="https://www.instagram.com/gejif_ifbaiano" target="_blank" class="social-link">Instagram</a>
-            </div>
+    
 
             <!-- Direitos autorais -->
             <p class="copyright">© 2025 GEJIF. Todos os direitos reservados.</p>
@@ -245,4 +243,3 @@
 </body>
 
 </html>
-
