--- a/index.html
+++ b/index.html
@@ -18,12 +18,27 @@
             <div class="logo">
                 <h1>GEJ<span>IF</span></h1>
             </div>
-            <!-- Menu de navegação -->
+            <!-- Menu de navegação COM ÍCONES -->
             <nav>
                 <ul class="menu">
-                    <li><a href="#home">Início</a></li>
-                    <li><a href="#games">Jogos e Apps</a></li>
-                    <li><a href="#how-it-works">Notícias</a></li>
+                    <li>
+                        <a href="#home" class="menu-link">
+                            <i data-lucide="home"></i>
+                            <span>Início</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#games" class="menu-link">
+                            <i data-lucide="gamepad-2"></i>
+                            <span>Jogos e Apps</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#how-it-works" class="menu-link">
+                            <i data-lucide="newspaper"></i>
+                            <span>Notícias</span>
+                        </a>
+                    </li>
                 </ul>
                 <!-- Botão para menu mobile -->
                 <div class="mobile-menu-btn">
@@ -243,4 +258,3 @@
 </body>
 
 </html>
-
