--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <li>
                         <a href="#games" class="menu-link">
                             <i data-lucide="gamepad-2"></i>
-                            <span>Jogos e Apps</span>
+                            <span>Apps</span>
                         </a>
                     </li>
                     <li>
