--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GEJIF</title>
+    <title>GEJiF</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap">
 </head>
@@ -16,7 +16,7 @@
         <div class="container">
             <!-- Logo do site -->
             <div class="logo">
-                <h1>GEJ<span>IF</span></h1>
+                <h1>GEJ<span>iF</span></h1>
             </div>
             <!-- Menu de navegação COM ÍCONES -->
             <nav>
@@ -57,7 +57,7 @@
         <div class="container">
             <div class="hero-content">
                 <h1>Jogos e Apps Criados por Alunos do IF Baiano</h1>
-                <h2>Inovação, aprendizado e criatividade em cada projeto.</h2>
+                <h2>Grupo de Estudos de Jogos do IF Baiano, Campus Senhor do Bonfim-BA.</h2>
                 <p>Tenha acesso a produções digitais desenvolvidas por alunos do IF Baiano – Campus Senhor do Bonfim e conheça o potencial da nova geração de desenvolvedores.</p>
                 <div class="hero-buttons">
                     <a href="#games" class="btn btn-primary">Ver Jogos</a>
@@ -69,42 +69,6 @@
             </div>
         </div>
     </section>
-
-    <section class="october-banner" role="region" aria-label="Banner Outubro Rosa">
-  <div class="october-left">
-    <h1>Outubro Rosa — Previna-se</h1>
-    <p>Cuide da sua saúde: agende seu exame, compartilhe informação e apoie a campanha de conscientização sobre o câncer de mama.</p>
-  </div>
-
-  <div class="october-right">
-    <div class="ribbon-wrap" aria-hidden="true">
-      <span class="pulse"></span>
-      <!-- Laço Rosa (SVG) -->
-      <svg class="ribbon-svg" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-        <defs>
-          <linearGradient id="g1" x1="0" x2="1">
-            <stop offset="0" stop-color="#ffd7e6" />
-            <stop offset="1" stop-color="#ff3d8f" />
-          </linearGradient>
-          <filter id="s" x="-20%" y="-20%" width="140%" height="140%">
-            <feDropShadow dx="0" dy="6" stdDeviation="8" flood-color="#000" flood-opacity="0.12"/>
-          </filter>
-        </defs>
-
-        <g transform="translate(100,100)" filter="url(#s)">
-          <path d="M-30,-10 C-60,-40 -40,-80 0,-60 C40,-80 60,-40 30,-10 C10,10 -10,40 0,70 C10,40 -10,10 -30,-10 Z" fill="url(#g1)"/>
-          <path d="M0,70 C-5,90 -10,110 -15,130" stroke="#ff8fb1" stroke-width="10" stroke-linecap="round" fill="none" opacity="0.95"/>
-          <path d="M0,70 C5,90 10,110 15,130" stroke="#ff3d8f" stroke-width="10" stroke-linecap="round" fill="none" opacity="0.95"/>
-        </g>
-      </svg>
-    </div>
-
-    <div class="fact">
-      <div style="font-size:1.05rem">1 em cada 8 mulheres</div>
-      <small>é diagnosticada com câncer de mama ao longo da vida, deteção precoce salva vidas</small>
-    </div>
-  </div>
-</section>
 
 
     <!-- Seção de jogos em destaque -->
@@ -237,7 +201,7 @@
         <div class="footer-content">
             <!-- Logo do rodapé -->
             <div class="footer-logo">
-                <h2>GEJ<span>IF</span></h2>
+                <h2>GEJ<span>iF</span></h2>
                 <p>Jogos e Aplicativos educacionais.</p>
             </div>
         </div>
@@ -247,7 +211,7 @@
     
 
             <!-- Direitos autorais -->
-            <p class="copyright">© 2025 GEJIF. Todos os direitos reservados.</p>
+            <p class="copyright">© 2025 GEJiF. Todos os direitos reservados.</p>
         </div>
     </div>
 </footer>
