--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <div class="container footer-content">
             <div class="footer-brand">
                 <h2>GEJ<span>iF</span></h2>
-                <p>Boas Festas e um Próspero Ano Novo! ✨</p>
+                <p>Boas Festas e um Próspero Ano Novo!</p>
             </div>
             <div class="footer-links">
                 <p>© 2025 GEJiF - Campus Senhor do Bonfim.</p>
@@ -128,3 +128,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
